Pass from Java 21 to java 17